src/character/race/snapshots/bag_of_tricks__character__race__elf__tests__snapshot.snap
---
source: src/character/race/elf.rs
expression: elf

---
- type: Elf
  subrace: Dark
- Thia Holimion (Diamonddew)
- age: 694
  base_speeds:
    - Walking: 30
  gender: Female
  height: 59
  size: Medium
  weight: 105

