src/character/race/snapshots/bag_of_tricks__character__race__elf__tests__snapshot_abilities-2.snap
---
source: src/character/race/elf.rs
expression: elf.abilities()
---
- - Dexterity
  - 2
- - Intelligence
  - 1
