src/character/race/snapshots/bag_of_tricks__character__race__elf__tests__snapshot_abilities.snap
---
source: src/character/race/elf.rs
expression: "ElfSubrace::iter().map(|subrace|\n                           (Elf{subrace,}).abilities()).collect::<Vec<Vec<AbilityScore>>>()"

---
- - - Dexterity
    - 2
  - - Charisma
    - 1
- - - Dexterity
    - 2
  - - Intelligence
    - 1
- - - Dexterity
    - 2
  - - Wisdom
    - 1

