src/character/race/snapshots/bag_of_tricks__character__race__elf__tests__snapshot_citations-2.snap
---
source: src/character/race/elf.rs
expression: elf.citations()
---
- book: PHB
  page: 21
- book: PHB
  page: 23
