src/character/race/snapshots/bag_of_tricks__character__race__elf__tests__snapshot_citations.snap
---
source: src/character/race/elf.rs
expression: "ElfSubrace::iter().map(|subrace|\n                           (Elf{subrace,}).citations()).collect::<Vec<CitationList>>()"

---
- - - Phb
    - 21
  - - Phb
    - 24
- - - Phb
    - 21
  - - Phb
    - 23
- - - Phb
    - 21
  - - Scag
    - 105
- - - Phb
    - 21
  - - Scag
    - 106
- - - Phb
    - 21
  - - Phb
    - 24

