src/character/race/snapshots/bag_of_tricks__character__race__elf__tests__snapshot_display.snap
---
source: src/character/race/elf.rs
expression: "ElfSubrace::iter().map(|subrace|\n                           format!(\"{}\", Elf\n                                   {\n                                       subrace\n                                   })).collect::<Vec<String>>().join(\"\\n\\n\")"

---
Dark Elf

High Elf

Wood Elf
