src/character/race/snapshots/bag_of_tricks__character__race__elf__tests__snapshot_features-2.snap
---
source: src/character/race/elf.rs
expression: elf.features()
---
- title: Ability Score Increase
  description: Your Dexterity score inscreases by 2.
  citation:
    book: PHB
    page: 23
- title: Ability Score Increase
  description: Your Intelligence score increases by 1.
  citation:
    book: PHB
    page: 23
