src/character/race/snapshots/bag_of_tricks__character__race__elf__tests__snapshot_features-3.snap
---
source: src/character/race/elf.rs
expression: elf.features()
---
- title: Darkvision
  description: "Accustomed to twilit forests and the night sky, you have superior vision in dark and dim conditions. You can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray."
  citation:
    book: PHB
    page: 23
- title: Fey Ancestry
  description: "You have advantage on saving throws against being charmed, and magic can't put you to sleep."
  citation:
    book: PHB
    page: 23
- title: Trance
  description: "Elves don't need to sleep. Instead, they meditate deeply, remaining semiconscious, for 4 hours a day. (The Common word for such meditation is \"trance.\") While meditating, you can dream after a fashion; such dreams are actually mental exercises that have become reflexive through years of practice. After resting in this way, you gain the same benefit that a human does from 8 hours of sleep."
  citation:
    book: PHB
    page: 23
- title: Mask of the Wild
  description: "You can attempt to hide even when you are only lightly obscured by foliage, heavy rain, falling snow, mist, and other natural phenomena."
  citation:
    book: PHB
    page: 24
