src/character/race/snapshots/bag_of_tricks__character__race__elf__tests__snapshot_features.snap
---
source: src/character/race/elf.rs
expression: elf.features()
---
- title: Alignment
  description: "Elves love freedom, variety, and self-expression, so they lean strongly toward the gentler aspects of chaos. They value and protect others' freedom as well as their own, and they are more often good than not. The drow are an exception; their exile into the Underdark has made them vicious and dangerous. Drow are more often evil than not."
  citation:
    book: PHB
    page: 23
- title: Darkvision
  description: "Accustomed to twilit forests and the night sky, you have superior vision in dark and dim conditions. You can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray."
  citation:
    book: PHB
    page: 23
- title: Fey Ancestry
  description: "You have advantage on saving throws against being charmed, and magic can't put you to sleep."
  citation:
    book: PHB
    page: 23
- title: Trance
  description: "Elves don't need to sleep. Instead, they meditate deeply, remaining semiconscious, for 4 hours a day. (The Common word for such meditation is \"trance.\") While meditating, you can dream after a fashion; such dreams are actually mental exercises that have become reflexive through years of practice. After resting in this way, you gain the same benefit that a human does from 8 hours of sleep."
  citation:
    book: PHB
    page: 23
- title: Superior Darkvision
  description: Your darkvision has a radius of 120 feet.
  citation:
    book: PHB
    page: 24
- title: Sunlight Sensitivity
  description: "You have disadvantage on attack rolls and on Wisdom (Perception) checks that rely on sight when you, the target of your attack, or whatever you are trying to perceive is in direct sunlight."
  citation:
    book: PHB
    page: 24
- title: Drow Magic
  description: "You know the dancing lights cantrip. When you reach 3rd level, you can cast the faerie fire spell once with this trait and regain the ability to do so when you finish a long rest. When you reach 5th level, you can cast the darkness spell once with this trait and regain the ability to do so when you finish a long rest. Charisma is your spellcasting ability for these spells."
  citation:
    book: PHB
    page: 24
